Make Ctrl+C/X/V shortcut work with layers when there is nothing else to copy

The new priority list for copying/cutting:

1) Cut/Copy selected vector shapes
2) Cut/Copy the content of pixel selection
3) Cut/Copy the selected layer

If the user wants to Cut/Copy a layer when there is a selection active,
then he/she should use a special Layer->Cut/Copy Layer menu action instead
of the default shortcut.

BUG:411463
CC:kimageshop@kde.org